FIX calculator vaidations

--- a/js calculator example/index.html
+++ b/js calculator example/index.html
@@ -14,8 +14,8 @@
             <div class="previous-operand"></div>
             <div class="current-operand"></div>
         </div>
-        <button class="span-two">AC</button>
-        <button class="operator"><--</button>
+        <button id="ac" class="span-two">AC</button>
+        <button class="del"><</button>
         <button class="operator">+</button>
         <button class="number">1</button>
         <button class="number">2</button>
